NEW288701
Fix "Never put an Inlines.h header in a non-Inlines.h header" style errors under `WebCore/dom` directory
https://bugs.webkit.org/show_bug.cgi?id=288701
Summary Fix "Never put an Inlines.h header in a non-Inlines.h header" style errors un...
Fujii Hironori
Reported 2025-02-26 23:09:41 PST
Fix "Never put an Inlines.h header in a non-Inlines.h header" style errors under `WebCore/dom` directory Parent bug: Bug 288700 – [umbrella️] Fix "Never put an Inlines.h header in a non-Inlines.h header" style errors > python ./Tools/Scripts/check-webkit-style ./Source/WebCore/dom -f -,+build-speed ERROR: Source/WebCore/dom/AbortSignal.h:28: Never put an Inlines.h header in a non-Inlines.h header. [build-speed/inlines] [4] ERROR: Source/WebCore/dom/ChildListMutationScope.h:34: Never put an Inlines.h header in a non-Inlines.h header. [build-speed/inlines] [4] ERROR: Source/WebCore/dom/Document.h:33: Never put an Inlines.h header in a non-Inlines.h header. [build-speed/inlines] [4] ERROR: Source/WebCore/dom/EventTargetConcrete.h:33: Never put an Inlines.h header in a non-Inlines.h header. [build-speed/inlines] [4] ERROR: Source/WebCore/dom/MessagePort.h:30: Never put an Inlines.h header in a non-Inlines.h header. [build-speed/inlines] [4] ERROR: Source/WebCore/dom/MutationObserverInterestGroup.h:33: Never put an Inlines.h header in a non-Inlines.h header. [build-speed/inlines] [4] ERROR: Source/WebCore/dom/ViewTransitionTypeSet.h:32: Never put an Inlines.h header in a non-Inlines.h header. [build-speed/inlines] [4]
Attachments
Fujii Hironori
Comment 1 2025-02-26 23:38:54 PST
Note You need to log in before you can comment on or make changes to this bug.