Fix "Never put an Inlines.h header in a non-Inlines.h header" style errors under `WebCore/dom` directory https://bugs.webkit.org/show_bug.cgi?id=288701

Reviewed by NOBODY (OOPS!).

* Source/WebCore/bindings/scripts/CodeGeneratorJS.pm:
(GenerateCallbackHeaderContent):
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackFunction.cpp:
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackFunction.h:
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackFunctionGenerateIsReachable.cpp:
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackFunctionGenerateIsReachable.h:
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackFunctionWithThisObject.cpp:
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackFunctionWithThisObject.h:
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackFunctionWithTypedefs.cpp:
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackFunctionWithTypedefs.h:
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackFunctionWithVariadic.cpp:
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackFunctionWithVariadic.h:
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackInterface.cpp:
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackInterface.h:
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackWithFunctionOrDict.cpp:
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackWithFunctionOrDict.h:
* Source/WebCore/bindings/scripts/test/JS/JSTestVoidCallbackFunction.cpp:
* Source/WebCore/bindings/scripts/test/JS/JSTestVoidCallbackFunction.h:
* Source/WebCore/dom/BroadcastChannel.cpp:
(WebCore::BroadcastChannel::scriptExecutionContext const):
* Source/WebCore/dom/BroadcastChannel.h:
* Source/WebCore/dom/CharacterData.cpp:
* Source/WebCore/dom/ChildListMutationScope.cpp:
(WebCore::ChildListMutationScope::ChildListMutationScope):
* Source/WebCore/dom/ChildListMutationScope.h:
(WebCore::ChildListMutationScope::ChildListMutationScope): Deleted.
* Source/WebCore/dom/ContextDestructionObserver.h:
* Source/WebCore/dom/MutationObserverInterestGroup.cpp:
(WebCore::MutationObserverInterestGroup::createForChildListMutation):
(WebCore::MutationObserverInterestGroup::createForCharacterDataMutation):
(WebCore::MutationObserverInterestGroup::createForAttributesMutation):
* Source/WebCore/dom/MutationObserverInterestGroup.h:
(WebCore::MutationObserverInterestGroup::createForChildListMutation): Deleted.
(WebCore::MutationObserverInterestGroup::createForCharacterDataMutation): Deleted.
(WebCore::MutationObserverInterestGroup::createForAttributesMutation): Deleted.
* Source/WebCore/dom/ViewTransitionTypeSet.h:
* Source/WebCore/html/canvas/EXTDisjointTimerQuery.cpp:
* Source/WebCore/html/canvas/EXTDisjointTimerQueryWebGL2.cpp:
* Source/WebCore/html/track/TrackListBase.cpp:
(WebCore::TrackListBase::scriptExecutionContext const):
* Source/WebCore/html/track/TrackListBase.h:
* Source/WebCore/page/Performance.cpp:
(WebCore::Performance::scriptExecutionContext const):
* Source/WebCore/page/Performance.h:
* Source/WebCore/rendering/RenderBlock.h:
* Source/WebCore/rendering/updating/RenderTreeBuilderInline.h:
* Source/WebCore/workers/service/background-fetch/BackgroundFetchRegistration.cpp:
(WebCore::BackgroundFetchRegistration::scriptExecutionContext const):
* Source/WebCore/workers/service/background-fetch/BackgroundFetchRegistration.h: